database-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-service
  labels:
    app: database-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-service
  template:
    metadata:
      labels:
        app: database-service
    spec:
      containers:
        -name: database-service
          image: mysql:latest
          ports:
            -containerPort: 3306
          volumeMounts:
            - name: mysql-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: mysql-pv-claim
              
---
apiVersion: v1
kind: Service
metadata: 
  name: database-service
  labels:
    app: database-service
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: database-service
