ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: localhost
    http:
      paths:
      - path: /user-service/
        backend:
          serviceName: user-service
          servicePort: 8080
